--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<nav>
 		<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/about">LINK 1</a><li>
+			<li><a href="/about">LINK 1</a></li>
 			<li><a href="/cv">LINK 2</a></li>
 			<li><a href="/blog">LINK 3</a></li>
 		</ul>
@@ -15,7 +15,7 @@
 		<div class="container">
 		<div class="blurb">
 			<h1>A Header!</h1>
-				<p>Here is a short paragraph of meaningless text. Here is a sentence where a <em>word</em> is emphasized for no reason at all. Here's a random <a href="http://mohamednajih.github.io">link</a> to the current page you are currently reading.</p>
+				<p>Here is a short paragraph of meaningless text. Here is a sentence where a <em>word</em> is emphasized for no reason at all. Here's a pointless <a href="http://mohamednajih.github.io">link</a> to the page you are currently reading.</p>
 		<div><!-- /.blurb -->
 		<div><!-- /.container -->
 		<footer>
