Completed the template for my website

--- a/180120/index.html
+++ b/180120/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Blog Post Template</title>
-		<link href="./css/main.css" rel="stylesheet" type="text/css">
+		<link href="../css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div id="page">
@@ -13,21 +13,21 @@
 			<div id="logo-atomic-weight">
 				95.95
 			</div><!-- logo-atomic-weight -->
-			<a href=".">
+			<a href="..">
 				<div id="logo-symbol">
 					Mo
 				</div><!-- logo-symbol -->
 			</a>
 			<div id="top-nav">
-				<a href="./about">about</a>
+				<a href="../about">about</a>
 			</div><!-- top-nav -->
 			<div id="header-rule"></div><!-- header-rule -->
 			<div id="date">
-				180121
+				180120
 			</div><!-- date -->
 			<div id="post">
 				<div id="post-title">
-					Blog Post Title
+					Very Very Very Long Blog Post Title To Properly Test the Layout of the Archive Page
 				</div><!-- post-title -->
 				<div id="post-body">
 					<p><strong>Molybdenum</strong> is a chemical element with symbol <strong>Mo</strong> and atomic number 42. The name is from Neo-Latin <em>molybdaenum</em>, meaning lead, since its ores were confused with lead ores. Molybdenum minerals have been known throughout history, but the element was discovered (in the sense of differentiating it as a new entity from the mineral salts of other metals) in 1778 by Carl Willhelm Scheele. The metal was first isolated in 1781 by Peter Jacob Hjelm.</p>
@@ -37,9 +37,9 @@
 				<div id="bottom-rule"></div><!-- bottom-rule -->
 				<div id="bottom-nav">
 					<ul>
-						<li style="color: transparent;">&lt</li>
-						<li><a href="./archive">archive</a></li>
-						<li><a href="./180120">&gt</a></li>
+						<li><a href="..">&lt</a></li>
+						<li><a href="../archive">archive</a></li>
+						<li><a href="../180119">&gt</a></li>
 					</ul>
 				</div><!-- bottom-nav -->
 			</div><!-- post -->
