--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Blog Post Template</title>
-		<link href="./css/main.css" rel="stylesheet" type="text/css">
+		<title>About Page Template</title>
+		<link href="../css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div id="page">
@@ -13,21 +13,15 @@
 			<div id="logo-atomic-weight">
 				95.95
 			</div><!-- logo-atomic-weight -->
-			<a href=".">
+			<a href="..">
 				<div id="logo-symbol">
 					Mo
 				</div><!-- logo-symbol -->
 			</a>
-			<div id="top-nav">
-				<a href="./about">about</a>
-			</div><!-- top-nav -->
 			<div id="header-rule"></div><!-- header-rule -->
-			<div id="date">
-				180121
-			</div><!-- date -->
 			<div id="post">
 				<div id="post-title">
-					Blog Post Title
+					About Me
 				</div><!-- post-title -->
 				<div id="post-body">
 					<p><strong>Molybdenum</strong> is a chemical element with symbol <strong>Mo</strong> and atomic number 42. The name is from Neo-Latin <em>molybdaenum</em>, meaning lead, since its ores were confused with lead ores. Molybdenum minerals have been known throughout history, but the element was discovered (in the sense of differentiating it as a new entity from the mineral salts of other metals) in 1778 by Carl Willhelm Scheele. The metal was first isolated in 1781 by Peter Jacob Hjelm.</p>
@@ -38,8 +32,8 @@
 				<div id="bottom-nav">
 					<ul>
 						<li style="color: transparent;">&lt</li>
-						<li><a href="./archive">archive</a></li>
-						<li><a href="./180120">&gt</a></li>
+						<li><a href="../archive">archive</a></li>
+						<li style="color: transparent;">&gt</li>
 					</ul>
 				</div><!-- bottom-nav -->
 			</div><!-- post -->
