--- a/180120/index.html
+++ b/180120/index.html
@@ -9,40 +9,40 @@
 		<div id="page">
 			<div id="logo-atomic-number">
 				42
-			</div><!-- logo-atomic-number -->
+			</div><!-- #logo-atomic-number -->
 			<div id="logo-atomic-weight">
 				95.95
-			</div><!-- logo-atomic-weight -->
+			</div><!-- #logo-atomic-weight -->
 			<a href="..">
 				<div id="logo-symbol">
 					Mo
-				</div><!-- logo-symbol -->
+				</div><!-- #logo-symbol -->
 			</a>
 			<div id="top-nav">
 				<a href="../about">about</a>
-			</div><!-- top-nav -->
-			<div id="header-rule"></div><!-- header-rule -->
+			</div><!-- #top-nav -->
+			<div id="header-rule"></div><!-- #header-rule -->
 			<div id="date">
 				180120
-			</div><!-- date -->
+			</div><!-- #date -->
 			<div id="post">
 				<div id="post-title">
 					Very Very Very Long Blog Post Title To Properly Test the Layout of the Archive Page
-				</div><!-- post-title -->
+				</div><!-- #post-title -->
 				<div id="post-body">
 					<p><strong>Molybdenum</strong> is a chemical element with symbol <strong>Mo</strong> and atomic number 42. The name is from Neo-Latin <em>molybdaenum</em>, meaning lead, since its ores were confused with lead ores. Molybdenum minerals have been known throughout history, but the element was discovered (in the sense of differentiating it as a new entity from the mineral salts of other metals) in 1778 by Carl Willhelm Scheele. The metal was first isolated in 1781 by Peter Jacob Hjelm.</p>
 					<p>Molybdenum does not occur naturally as a free metal on Earth; it is found only in various oxidation states in minerals. The free element, a silvery metal with a gray cast, has the sixth-highest melting point of any element. It readily forms hard, stable carbides in alloys, and for this reason most of world production of the element (about 80%) is used in steel alloys, including high-strength alloys and superalloys.</p>
 					<p>The above text was shamelessly copy-and-pasted from <a href="https://en.wikipedia.org/wiki/Molybdenum">Wikipedia</a>.</p>
-				</div><!-- post-body -->
-				<div id="bottom-rule"></div><!-- bottom-rule -->
+				</div><!-- #post-body -->
+				<div id="bottom-rule"></div><!-- #bottom-rule -->
 				<div id="bottom-nav">
 					<ul>
-						<li><a href="..">&lt</a></li>
+						<li><a href="..">&lt;</a></li>
 						<li><a href="../archive">archive</a></li>
-						<li><a href="../180119">&gt</a></li>
+						<li><a href="../180119">&gt;</a></li>
 					</ul>
-				</div><!-- bottom-nav -->
-			</div><!-- post -->
-		</div><!-- page -->
+				</div><!-- #bottom-nav -->
+			</div><!-- #post -->
+		</div><!-- #page -->
 	</body>
 </html>
